# restorer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  restorer.cpp  restorer.h
example/: example.cpp  example.h  example.vcxproj  example_restored.h
src/: main.cpp  restorer.cpp  restorer.h  rtti.cpp  rtti.h
